# testit

./: Cargo.toml
src/: main.rs
src/example/: test.json  test_ports.json  test_ports_v0.2.json
src/helpers/: argsparser.rs
src/server/: server.rs
src/structure/: args_structure.rs  test_structure.rs  test_structure_adv.rs
src/testhelpers/: mod.rs  querandomizer.rs  querandomizer_b.rs
src/testloader/: loader.rs  mod.rs
