[package]
name = "testit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuffle = "0.1" 
rand = "0.8"
axum = "0.7"
tokio = "1.38"